Fixed problems with .modal-open class ( set body padding to 0 and overflow-y to scroll )

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,6 @@
 body {
     background-color: #fff;
-    padding-top: 50px;
-    padding-bottom: 70px;
+    padding: 50px 0 70px 0 !important;
     font-family: 'Merriweather', sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -340,4 +339,7 @@ p {
     margin-left: -20px;
     color: #2bb900;
     
+}
+.modal-open {
+    overflow-y: scroll;
 }
